fixing overflow

--- a/css/index.css
+++ b/css/index.css
@@ -58,6 +58,7 @@ html, body{
   justify-content: flex-start;
   align-items: center;
   gap: 10px;
+  overflow-x: auto;
 }
 
 .article{
